--- a/eventPlanner/compose.yaml
+++ b/eventPlanner/compose.yaml
@@ -1,9 +1,20 @@
 services:
   postgres:
     image: 'postgres:latest'
+    container_name: eventplanner-postgres
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=eventplanner'
+      - 'POSTGRES_USER=user'
+      - 'POSTGRES_PASSWORD=password'
     ports:
-      - '5432'
+      - '5432:5432'
+
+  pgadmin:
+    image: 'dpage/pgadmin4:latest'
+    environment:
+      PGADMIN_DEFAULT_EMAIL: 'admin@example.com'
+      PGADMIN_DEFAULT_PASSWORD: 'admin'
+    ports:
+      - '5050:80'
+    depends_on:
+      - postgres
