--- a/eventPlanner/src/main/resources/application.properties
+++ b/eventPlanner/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=eventPlanner
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.sql.init.platform=postgres
+
+spring.jpa.hibernate.ddl-auto = create-drop
+
+spring.jpa.show-sql = true
+
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.open-in-view=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventplanner
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
