Implement email sending

--- a/eventPlanner/src/main/resources/application.properties
+++ b/eventPlanner/src/main/resources/application.properties
@@ -21,3 +21,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/eventplanner
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=eventplannertestmail@gmail.com
+spring.mail.password=lqwocyuftdwdntgp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
