Add base app url

--- a/eventPlanner/src/main/resources/application.properties
+++ b/eventPlanner/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.mail.username=eventplannertestmail@gmail.com
 spring.mail.password=lqwocyuftdwdntgp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+app.base-url=http://localhost:8080/api
