Add frontend base url

--- a/eventPlanner/src/main/resources/application.properties
+++ b/eventPlanner/src/main/resources/application.properties
@@ -30,3 +30,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 app.base-url=http://localhost:8080/api
+app.frontend-base-url=http://localhost:4200
