--- a/eventPlanner/src/main/resources/application.properties
+++ b/eventPlanner/src/main/resources/application.properties
@@ -31,3 +31,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 app.base-url=http://localhost:8080/api
 app.frontend-base-url=http://localhost:4200
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
